--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -76,7 +76,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/m">drag and drop web maker</a></section><section class="cid-qKpDRZpTbW mbr-fullscreen mbr-parallax-background" id="header2-f">
+<section class="engine"><a href="https://mobirise.ws/o">best mobile website builder</a></section><section class="cid-qKpDRZpTbW mbr-fullscreen" data-bg-video="http://www.youtube.com/watch?v=uNCr7NdOJgw" id="header2-f">
 
     
 
@@ -254,7 +254,7 @@
                 </div>
 
                 <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                    <input type="hidden" value="2Z0KAzy6jGboFqg4W1oDPi3yEh378+eYJCPzwjsFZiMmrENEpHPoz2xd/iqFDeCN5BlXR16fGpu7yjFE2wOCzUSPSvucMNclkuPiOkazCyYRnrU4hVGlp85M7TSBmUq6" data-form-email="true">
+                    <input type="hidden" value="qw54AXjpsrtpQ1VhgoysXED6NAbwFjwB0AvhQIt2C7Mm9b6tQtPtpoBWR660R3BjnJdVIx5KZYPF33/6qOzZ4swhYmeMcLmw9SxrAXmEOJ7dmfstVgqwh+eA04XXUYf1" data-form-email="true">
                     <div class="form-group">
                         <input type="text" class="form-control input-sm input-inverse" name="name" required="" data-form-field="Name" placeholder="Name" id="name-header13-i">
                     </div>
@@ -301,10 +301,12 @@
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
-  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
+  <script src="assets/dropdown/js/script.min.js"></script>
+  <script src="assets/ytplayer/jquery.mb.ytplayer.min.js"></script>
+  <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
   <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/playervimeo/vimeo_player.js"></script>
-  <script src="assets/dropdown/js/script.min.js"></script>
+  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
   
